@@ -290,6 +290,14 @@ char *UString::ascii() const
   return statBuffer;
 }
 
+#ifdef KJS_DEBUG_MEM
+void UString::globalClear()
+{
+  delete [] statBuffer;
+  statBuffer = 0L;
+}
+#endif
+
 UString &UString::operator=(const char *c)
 {
   release();
